[package]
name = "kafkaesque"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Kafka-compatible broker backed by object storage."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/samdvr/kafkaesque"
homepage = "https://github.com/samdvr/kafkaesque"
documentation = "https://docs.rs/kafkaesque"
keywords = ["kafka", "redpanda", "server", "protocol"]
categories = ["network-programming"]

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
sasl = []  # Enables SASL authentication (PLAIN mechanism)
loom = ["dep:loom"]  # Enables Loom-based concurrency tests
test-utilities = []  # Exposes MockCoordinator and other test helpers for integration tests
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
async-trait = "0.1.80"
bytes = "1.11.0"
nom = "7.1.3"
nombytes = "0.1.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
tokio = { version = "1.48.0", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.44"

# TLS support (optional)
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }

# SlateDB storage backend
slatedb = "0.10.0"
object_store = { version = "0.12.4", features = ["aws", "gcp", "azure"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
futures = "0.3"
fastrand = "2.3.0"  # Lightweight RNG for jitter calculations

# Metrics and monitoring
prometheus = "0.14.0"
once_cell = "1.21.3"

# Caching
moka = { version = "0.12", features = ["future", "sync"] }

# Concurrent collections
dashmap = "6.1"

# Consistent hashing for partition assignment
conhash = "0.5.1"

# Error handling
thiserror = "2.0"

# Retry/backoff
backon = "1.3"

# Raft consensus
openraft = { version = "0.9.2", features = ["serde"] }
bincode = "1.3.3"

# Logging and tracing
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Loom for concurrency testing (optional, dev-only)
loom = { version = "0.7", optional = true }

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["tonic"], optional = true }
tracing-opentelemetry = { version = "0.31.0", optional = true }

[dev-dependencies]
tempfile = "3.8"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
serial_test = "3.2"
kafkaesque = { path = ".", features = ["test-utilities"] }
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "produce_bench"
harness = false

[[example]]
name = "cluster"

[[example]]
name = "benchmark"
