[workspace]
members = [
    ".",
    "crates/kafkaesque-protocol",
    "crates/kafkaesque-bin",
]

[workspace.package]
edition = "2024"
rust-version = "1.89"
license-file = "LICENSE"
repository = "https://github.com/samdvr/kafkaesque"
homepage = "https://github.com/samdvr/kafkaesque"

[package]
name = "kafkaesque"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
description = "Kafka-compatible broker backed by object storage."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/samdvr/kafkaesque"
homepage = "https://github.com/samdvr/kafkaesque"
documentation = "https://docs.rs/kafkaesque"
keywords = ["kafka", "redpanda", "server", "protocol"]
categories = ["network-programming"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]
sasl = []  # Enables SASL authentication (PLAIN mechanism)
loom = ["dep:loom"]  # Enables Loom-based concurrency tests
test-utilities = []  # Exposes MockCoordinator and other test helpers for integration tests
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dependencies]
# Wire protocol layer (parser, encoder, types, constants, wire-error).
# Carries no tokio / slatedb / openraft so it can be reused independently.
kafkaesque-protocol = { path = "crates/kafkaesque-protocol", version = "0.1.0" }

async-trait = "0.1.80"
# bytes 1.11.1+ closes RUSTSEC-2026-0007 (BytesMut::reserve integer overflow on the wire path).
bytes = "1.11.1"
nom = "7.1.3"
nombytes = "0.1.1"
num-traits = "0.2.19"
tokio = { version = "1.48.0", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1.44"

# TLS support (optional). Pinned to versions that close the rustls-webpki and
# quinn-proto advisories (RUSTSEC-2026-0037, RUSTSEC-2026-0049, RUSTSEC-2026-0098/9/0104).
tokio-rustls = { version = "0.26.4", optional = true }
rustls = { version = "0.23.40", default-features = false, features = ["std", "tls12"], optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }

# SlateDB storage backend.
# `moka` feature enables `MokaCache` — required for the shared block cache
# wired through `SharedSlateDbResources` (see `src/cluster/slatedb_resources.rs`).
slatedb = { version = "0.10.1", features = ["moka"] }
object_store = { version = "0.12.5", features = ["aws", "gcp", "azure"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
uuid = { version = "1.19.0", features = ["v4"] }
# chrono 0.4.45 picks up the patched `time` (closes RUSTSEC-2026-0009 stack-exhaustion DoS).
chrono = "0.4.45"
base64 = "0.22"
futures = "0.3"
fastrand = "2.3.0"  # Lightweight RNG for jitter calculations
itoa = "1.0.15"

# xxh3_64 is the cluster-stable hash used to map keys (topic / group / producer)
# onto metadata Raft shards. Pinning the algorithm here is part of the
# bootstrap contract — see `src/cluster/raft/hash.rs`.
twox-hash = { version = "2.1", default-features = false, features = ["xxhash3_64"] }

# Metrics and monitoring
prometheus = "0.14.0"
once_cell = "1.21.3"

# Constant-time equality for secret comparisons.
subtle = "2.6"

# Zero memory holding secrets on drop. Used to wrap PLAIN passwords held in
# heap so a core dump or `/proc/<pid>/maps` reader can't recover credentials
# from a long-running broker.
zeroize = "1.8"

# HMAC-SHA256 for Raft RPC authentication and ACL principal verification.
hmac = "0.12"
sha2 = "0.10"
# PBKDF2-HMAC-SHA256 for SCRAM password derivation (precomputes HMAC pads
# once per password instead of rederiving them every iteration).
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }

# Caching
moka = { version = "0.12", features = ["future", "sync"] }

# Concurrent collections
dashmap = "6.1"
crossbeam-queue = "0.3"

# Lock-free atomic Arc swaps (used in hot read paths where a value is
# set-once / rarely-cleared but read on every produce/fetch).
arc-swap = "1.7"

# Consistent hashing for partition assignment
conhash = "0.5.1"

# Error handling
thiserror = "2.0"

# Retry/backoff
backon = "1.3"

# Raft consensus
openraft = { version = "0.9.2", features = ["serde"] }
# Postcard replaces our direct use of `bincode`. bincode 1.3.3
# is unmaintained (RUSTSEC-2025-0141); postcard is actively maintained,
# format-stable, and a drop-in for our serde-derived types. Note: bincode
# still appears transitively via foyer / madsim / slatedb — that's a
# downstream concern.
postcard = { version = "1.0", features = ["use-std"] }

# Logging and tracing
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Loom for concurrency testing (optional, dev-only)
loom = { version = "0.7", optional = true }

# OpenTelemetry for distributed tracing
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
crc32c = "0.6.8"

[dev-dependencies]
tempfile = "3.8"
rdkafka = "0.38.0"
serial_test = "3.2"
kafkaesque = { path = ".", version = "0.1.0", features = ["test-utilities"] }
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.5"
# Self-signed cert generation for TLS misconfig tests (expired cert,
# hostname mismatch, mTLS-without-client-cert). Used only by
# `tests/tls_misconfig_tests.rs`. `rcgen` 0.13 builds against the same
# `rustls/pki-types` versions our runtime TLS stack uses.
rcgen = "0.13"
# Date helpers for adversarial cert validity windows. rcgen takes
# `time::OffsetDateTime` for `not_before`/`not_after` but does not
# re-export the `time` crate; pull it in directly so the misconfig tests
# can mint a deliberately-expired cert.
time = "0.3"
# Linearizability checking. `stateright` provides a Porcupine-style
# `LinearizabilityTester` (Wing-Gong-Lynch) that we drive from
# `tests/linearizability_real_tests.rs` against the real `RaftCoordinator`
# + `PartitionStore`. There is no maintained Rust port of the Go Porcupine /
# Clojure Knossos tools published on crates.io; stateright is the closest
# in-process equivalent and is what we use here.
stateright = "0.31.0"
# `kafka-protocol` is a separate Rust implementation of the Kafka wire
# protocol — used by the differential roundtrip tests in
# `tests/wire_differential.rs` so we verify our parsers against an
# independent encoder, not just a hand-rolled reference. Newer 0.x
# releases compile cleanly against `bytes 1.11+`; older ones (≤0.13) run
# into a `try_get_u8` ambiguity with the bytes crate's now-native method.
kafka-protocol = "0.17"

[[bench]]
name = "produce_bench"
harness = false

[[example]]
name = "benchmark"

# Reduce debuginfo so linking the ~65 integration test binaries on
# ubuntu-latest (7 GB RAM) doesn't SIGBUS lld. line-tables-only keeps
# file:line in backtraces; split-debuginfo=unpacked moves the rest into
# separate .dwo files instead of bloating the linked binary.
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"
