[package]
name = "kafkaesque-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.kafkaesque]
path = ".."

[[bin]]
name = "request_parse"
path = "fuzz_targets/request_parse.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
