[package]
name = "kafkaesque-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.kafkaesque]
path = ".."

[[bin]]
name = "request_parse"
path = "fuzz_targets/request_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_primitives"
path = "fuzz_targets/parser_primitives.rs"
test = false
doc = false
bench = false

[[bin]]
name = "record_batch_header"
path = "fuzz_targets/record_batch_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "request_parse_structured"
path = "fuzz_targets/request_parse_structured.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
