[package]
name = "kafkaesque-protocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Wire-protocol layer for the Kafkaesque Kafka-compatible broker (parser, encoder, types, errors)."
license-file = "../../LICENSE"
repository = "https://github.com/samdvr/kafkaesque"
documentation = "https://docs.rs/kafkaesque-protocol"
keywords = ["kafka", "redpanda", "protocol"]
categories = ["network-programming", "parser-implementations"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[dependencies]
# Wire format primitives.
bytes = "1.11.1"
nom = "7.1.3"
nombytes = "0.1.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
crc32c = "0.6.8"
